--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@amap/amap-jsapi-loader": "^1.0.1",
     "@stomp/stompjs": "^6.1.2",
+    "@vuemap/vue-amap": "^1.1.3",
     "axios": "^0.26.1",
     "element-plus": "^2.1.9",
     "ol": "^6.14.1",
@@ -18,8 +19,10 @@
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
+    "@amap/amap-jsapi-types": "^0.0.8",
     "@types/sockjs-client": "^1.5.1",
     "@vitejs/plugin-vue": "^2.3.0",
+    "@vuemap/unplugin-resolver": "^1.0.3",
     "typescript": "^4.5.4",
     "unplugin-auto-import": "^0.7.1",
     "unplugin-vue-components": "^0.19.2",
