--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@stomp/stompjs": "^6.1.2",
     "@vuemap/vue-amap": "^1.1.3",
     "axios": "^0.26.1",
+    "echarts": "^5.3.2",
     "element-plus": "^2.1.9",
     "ol": "^6.14.1",
     "sockjs-client": "^1.6.0",
     "vue": "^3.2.25",
+    "vue-echarts": "^6.0.3",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@amap/amap-jsapi-types": "^0.0.8",
+    "@types/amap-js-api": "^1.4.10",
     "@types/sockjs-client": "^1.5.1",
     "@vitejs/plugin-vue": "^2.3.0",
     "@vuemap/unplugin-resolver": "^1.0.3",
